test/distributions/sungeun/dataPar1.badMinGranularity.good
dataPar1.chpl:1: error: halt reached - dataParMinGranularity must be >= 0
